<resources>
    <string name="app_name">Revasolutions Sample Application</string>
    <string name="AppCopyright">Copyright 2013&#8211;2016 by Reva Solutions</string>
    <string name="MainPage_Title">Revasolutions Capture Solution</string>
	<string name="MainPage_TakePicture">Take Picture</string>
    <string name="MainPage_TakeContinuousPictures">Take Continuous Pictures</string>
	<string name="MainPage_EnhanceImage">Enhance Image</string>
	<string name="MainPage_Settings">Settings</string>
	<string name="MainPage_Login">Login</string>
	<string name="MainPage_Logout">Logout</string>
	<string name="MainPage_FileStackUpload">FileStackUpload(Static)</string>
    <string name="MainPage_CaptivaUpload">CaptivaUpload(Static)</string>
    <string name="MainPage_CreateFilterProfile">Create Filter Profile</string>
    <string name="MainPage_filterProfileSelections">Please select a filter profile</string>
    <string name="EnhanceImage_Title">Enhance Image</string>
    <string name="EnhanceImageCrop_Title">Crop Image</string>
    <string name="EnhanceImageQuadCrop_Title">Quad Crop Image</string>
    <string name="ImageInfo_Title">Information</string>
    <string name="ImageInfo_DeviceID">Device ID:  </string>
    <string name="ImageInfo_Width">Image Width:  </string>
    <string name="ImageInfo_Height">Image Height:  </string>
    <string name="ImageInfo_Channels">Image Channels:  </string>
    <string name="ImageInfo_BitsPerPixel">Image Bits Per Pixel:  </string>
    <string name="ImageInfo_Version">Version:  </string>
    <string name="ImageInfo_Glare">Glare:  </string>
    <string name="ImageInfo_Quadrilateral">Quadrilateral:  </string>
    <string name="ImageInfo_Perspective">Perspective:  </string>
    <string name="ImageInfo_TotalQuality">Total Quality:  </string>
    <string name="ImageInfo_LastError">Last Error:  </string>
    <string name="General_Menu">Menu</string>
    <string name="General_NavPrev">&lt; Prev</string>
    <string name="General_NavNext">Next &gt;</string>
    <string name="General_Image">Image</string>
    <string name="General_Done">Done</string>
    <string name="General_Update">Update</string>
    <string name="Button_UndoAll">Undo All</string>
    <string name="Button_CropSubmit">Submit Crop</string>
    <string name="Menu_ImageLabel">Image Label</string>
    <string name="Menu_BlackWhite">Black-White</string>
    <string name="Menu_Gray">Gray</string>
    <string name="Menu_Deskew">Deskew</string>
    <string name="Menu_RotateLeft">Rotate Left</string>
    <string name="Menu_RotateRight">Rotate Right</string>
    <string name="Menu_Crop">Crop</string>
    <string name="Menu_QuadCrop">Quadrilateral Crop</string>
    <string name="Menu_AutoCrop">Auto Crop</string>
    <string name="Menu_Delete">Delete</string>
    <string name="Menu_GetInfo">Get Information</string>
    <string name="Menu_Lighter">Lighter</string>
    <string name="Menu_Darker">Darker</string>
    <string name="Menu_IncreaseContrast">Increase Contrast</string>
    <string name="Menu_DecreaseContrast">Decrease Contrast</string>
    <string name="Menu_RemoveNoise">Remove Noise</string>
    <string name="Menu_Resize">Resize</string>
    <string name="Menu_Rotate180">Rotate 180</string>
    <string name="Menu_ImageUpload">Upload Image</string>
    <string name="GPREF_CAPTURE_GROUP">GPREF_CAPTURE_GROUP</string>
	<string name="GPREF_CAPTURE_GROUP_TITLE">Capture Settings</string>
    <string name="GPREF_EDGELABEL">GPREF_EDGELABEL</string>
	<string name="GPREF_EDGELABEL_TITLE">Edge Label</string>
	<string name="GPREF_EDGELABEL_SUMMARY">Display text on the edge of the camera window.</string>
	<string name="GPREF_CENTERLABEL">GPREF_CENTERLABEL</string>
	<string name="GPREF_CENTERLABEL_TITLE">Center Label</string>
	<string name="GPREF_CENTERLABEL_SUMMARY">Display text in the center of the camera window.</string>
	<string name="GPREF_CAPTURINGLABEL">GPREF_CAPTURINGLABEL</string>
	<string name="GPREF_CAPTURINGLABEL_TITLE">Capturing Label</string>
	<string name="GPREF_CAPTURINGLABEL_SUMMARY">The text to display during the capturing phase.</string>
	<string name="GPREF_SENSOR_LIGHT">GPREF_SENSOR_LIGHT</string>
	<string name="GPREF_SENSOR_LIGHT_TITLE">Use Light Sensor</string>
	<string name="GPREF_SENSOR_LIGHT_SUMMARY">This will display the light sensor on the capture window (Default is true).</string>
	<string name="GPREF_SENSOR_LIGHT_VALUE">GPREF_SENSOR_LIGHT_VALUE</string>
	<string name="GPREF_SENSOR_LIGHT_VALUE_TITLE">Light Sensitivity</string>
	<string name="GPREF_SENSOR_LIGHT_VALUE_SUMMARY">The is the amount of light needed to satisfy the light sensor. Acceptable integer values are 0 (no light) to 5000 (very bright light). The default is 50.</string>
	<string name="GPREF_SENSOR_MOTION">GPREF_SENSOR_MOTION</string>
	<string name="GPREF_SENSOR_MOTION_TITLE">Use Motion Sensor</string>
	<string name="GPREF_SENSOR_MOTION_SUMMARY">This will display the motion sensor (shared with focus) on the capture window (Default is true).</string>
	<string name="GPREF_SENSOR_MOTION_VALUE">GPREF_SENSOR_MOTION_VALUE</string>
	<string name="GPREF_SENSOR_MOTION_VALUE_TITLE">Motion Sensitivity</string>
	<string name="GPREF_SENSOR_MOTION_VALUE_SUMMARY">This is the amount of motion needed to satisfy the motion sensor. Acceptable float values are 0.0 (absolutely no motion) to 10.0 (large motion allowed). The default is 0.30.</string>
	<string name="GPREF_SENSOR_FOCUS">GPREF_SENSOR_FOCUS</string>
	<string name="GPREF_SENSOR_FOCUS_TITLE">Use Focus Sensor</string>
	<string name="GPREF_SENSOR_FOCUS_SUMMARY">This will display the focus sensor (shared with motion) on the capture window (Default is true).</string>
    <string name="GPREF_SENSOR_QUALITY">GPREF_SENSOR_QUALITY</string>
    <string name="GPREF_SENSOR_QUALITY_TITLE">Use Quality Sensor</string>
    <string name="GPREF_SENSOR_QUALITY_SUMMARY">This will display the quality sensor on the capture window (Default is false). This setting should be enabled to use the quadrilateral overlay view during capture.</string>
    <string name="GPREF_GUIDELINES">GPREF_GUIDELINES</string>
    <string name="GPREF_GUIDELINES_TITLE">Display Guidelines</string>
    <string name="GPREF_GUIDELINES_SUMMARY">This will display the guidelines on the capture window.</string>
    <string name="GPREF_PICTURE_CROP">GPREF_PICTURE_CROP</string>
    <string name="GPREF_PICTURE_CROP_TITLE">Display Picture Crop Guidelines</string>
    <string name="GPREF_PICTURE_CROP_SUMMARY">This will display the picture crop guidelines on the capture window.</string>
    <string name="GPREF_PICTURE_CROP_COLOR">GPREF_PICTURE_CROP_COLOR</string>
    <string name="GPREF_PICTURE_CROP_COLOR_TITLE">Picture Crop Guidelines Color</string>
    <string name="GPREF_PICTURE_CROP_COLOR_SUMMARY">The color of the picture crop guidelines.</string>
    <string name="GPREF_PICTURE_CROP_WARNING_COLOR">GPREF_PICTURE_CROP_WARNING_COLOR</string>
    <string name="GPREF_PICTURE_CROP_WARNING_COLOR_TITLE">Picture Crop Guidelines Warning Color</string>
    <string name="GPREF_PICTURE_CROP_WARNING_COLOR_SUMMARY">The warning color of the picture crop guidelines.</string>
    <string name="GPREF_PICTURE_CROP_ASPECT_WIDTH">GPREF_PICTURE_CROP_ASPECT_WIDTH</string>
    <string name="GPREF_PICTURE_CROP_ASPECT_WIDTH_TITLE">Picture Crop Guidelines Aspect Width</string>
    <string name="GPREF_PICTURE_CROP_ASPECT_WIDTH_SUMMARY">The width value for the picture crop guidelines aspect ratio.</string>
    <string name="GPREF_PICTURE_CROP_ASPECT_HEIGHT">GPREF_PICTURE_CROP_ASPECT_HEIGHT</string>
    <string name="GPREF_PICTURE_CROP_ASPECT_HEIGHT_TITLE">Picture Crop Guidelines Aspect Height</string>
    <string name="GPREF_PICTURE_CROP_ASPECT_HEIGHT_SUMMARY">The height value for the picture crop guidelines aspect ratio.</string>
    <string name="GPREF_SENSOR_QUALITY_GLARE_VALUE">GPREF_SENSOR_QUALITY_GLARE_VALUE</string>
    <string name="GPREF_SENSOR_QUALITY_GLARE_TITLE">Glare Sensitivity</string>
    <string name="GPREF_SENSOR_QUALITY_GLARE_SUMMARY">The amount of glare that is allowed in the image. Values can be in the range 0 (all glare is allowed)–100 (no glare is allowed).</string>
    <string name="GPREF_SENSOR_QUALITY_PERSPECTIVE_VALUE">GPREF_SENSOR_QUALITY_PERSPECTIVE_VALUE</string>
    <string name="GPREF_SENSOR_QUALITY_PERSPECTIVE_TITLE">Perspective Sensitivity</string>
    <string name="GPREF_SENSOR_QUALITY_PERSPECTIVE_SUMMARY">The minimum required squareness for the corners of the detected quadrilateral in the image. Values can be in the range 0 (no quadrilateral required)–100 (the corners must be perfectly square).</string>
    <string name="GPREF_SENSOR_QUALITY_QUADRILATERAL_VALUE">GPREF_SENSOR_QUALITY_QUADRILATERAL_VALUE</string>
    <string name="GPREF_SENSOR_QUALITY_QUADRILATERAL_TITLE">Quadrilateral Sensitivity</string>
    <string name="GPREF_SENSOR_QUALITY_QUADRILATERAL_SUMMARY">The minimum required size for the quadrilateral that must be detected in the image. Values can be in the range 0 (no quadrilateral required)–100 (the entire frame must be filled with a quadrilateral).</string>
    <string name="GPREF_CANCEL">GPREF_CANCEL</string>
	<string name="GPREF_CANCEL_TITLE">Display Cancel Button</string>
	<string name="GPREF_CANCEL_SUMMARY">This will display a cancel/back button on the capture window.</string>
	<string name="GPREF_TORCH_BUTTON">GPREF_TORCH_BUTTON</string>
	<string name="GPREF_TORCH_BUTTON_TITLE">Display Torch Button</string>
	<string name="GPREF_TORCH_BUTTON_SUMMARY">This will display a torch button on the capture window.</string>
	<string name="GPREF_TORCH">GPREF_TORCH</string>
	<string name="GPREF_TORCH_TITLE">Initial Torch</string>
	<string name="GPREF_TORCH_SUMMARY">This will turn on the torch for the capture window.</string>
	<string name="GPREF_CAPTUREDELAY">GPREF_CAPTUREDELAY</string>
	<string name="GPREF_CAPTUREDELAY_TITLE">Capture Delay</string>
	<string name="GPREF_CAPTUREDELAY_SUMMARY">A positive integer representing the time (ms) to wait after the user selects the capture button. The default value is 500.</string>
    <string name="GPREF_CONTINUOUSCAPTUREFRAMEDELAY">GPREF_CONTINUOUSCAPTUREFRAMEDELAY</string>
    <string name="GPREF_CONTINUOUSCAPTUREFRAMEDELAY_TITLE">Continuous Capture Frame Delay</string>
    <string name="GPREF_CONTINUOUSCAPTUREFRAMEDELAY_SUMMARY">A positive integer representing the time (ms) to wait before processing the next frame after a frame has been captured in continuous capture mode. The default value is 500.</string>
    <string name="GPREF_CAPTURETIMEOUT">GPREF_CAPTURETIMEOUT</string>
	<string name="GPREF_CAPTURETIMEOUT_TITLE">Capture Timeout</string>
	<string name="GPREF_CAPTURETIMEOUT_SUMMARY">A positive integer representing the time (ms) to wait for optimal conditions before taking the picture. A value of 0 (default) indicates no wait.</string>
    <string name="GPREF_CAPTURESIMILARITY">GPREF_CAPTURESIMILARITY</string>
    <string name="GPREF_CAPTURESIMILARITY_TITLE">Capture Similarity</string>
    <string name="GPREF_CAPTURESIMILARITY_SUMMARY">A float value between 0 (no similarity) and 100 (identical) to use as a threshold for detecting a new image in continuous capture mode.</string>
    <string name="GPREF_CAPTURECOUNT">GPREF_CAPTURECOUNT</string>
    <string name="GPREF_CAPTURECOUNT_TITLE">Capture Count</string>
    <string name="GPREF_CAPTURECOUNT_SUMMARY">A positive integer representing the number of images to capture in a continuous capture session.</string>
	<string name="GPREF_OPTIMALCONDREQ">GPREF_OPTIMALCONDREQ</string>
	<string name="GPREF_OPTIMALCONDREQ_TITLE">Optimal Conditions Required</string>
    <string name="CreateProfilePage_CreateBtn">Create Filter Profile</string>
    <string name="CreateProfilePage_Title">Input a profile name and select your filters</string>
    <string name="CreateProfilePage_ProfileNameInput">Please input a name for your profile</string>
</resources>