<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/createProfileTitle"
        android:text="@string/CreateProfilePage_Title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/createProfileNameInput"
        android:text="@string/CreateProfilePage_ProfileNameInput"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createProfileTitle"/>

    <Button
        android:id="@+id/CreateProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateProfilePage_CreateBtn"
        android:layout_below="@+id/createProfileNameInput"/>

    <ToggleButton
        android:id="@+id/autoApplyFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onToggleClicked"
        android:layout_below="@+id/CreateProfileButton"/>

    <ListView
        android:id="@+id/filterListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/autoApplyFilter"
        android:layout_alignParentBottom ="true"/>

</LinearLayout>